gap fixing#4

--- a/frontend/src/pages/HomePage.module.css
+++ b/frontend/src/pages/HomePage.module.css
@@ -96,7 +96,8 @@
   }
 }
 .socials-container {
-  display: flex; /* Arrange icons in a row */
+  display: flex;
+  width: 80%; /* Arrange icons in a row */
 }
 
 .socialIcon:link,
